arr/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: music
          persistentVolumeClaim:
            claimName: music-storage
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:latest
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: music
              mountPath: /data
          ports:
            - name: web-ui
              containerPort: 8686

---

apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  namespace: arr
spec:
  selector:
    app: lidarr
  ports:
    - name: web-ui
      port: 8686
