arr/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingres
  namespace: arr
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr-service
                port:
                  name: web-ui
